--- a/app/views/users/log_in.html.erb
+++ b/app/views/users/log_in.html.erb
@@ -7,7 +7,7 @@
 <%= text_field_tag :username %>
 <%= label_tag :password %>
 <%= password_field_tag :password %>
-<%= submit_tag 'Log_in'%>
+<%= submit_tag 'Log In!'%>
 
 
 <% end %>
