--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,6 +1,7 @@
 
-<h1><%=@user.username%> ,Here are the Movies and songs that you love:</h1>
-<%= button_to 'log_out', log_out_path, method: :delete %>
+<h2>Welcome Back, <%=@user.username%></h2> 
+  <h3>Here are the Movies and songs that you love:</h3>
+<%= button_to 'Log Out', log_out_path, method: :delete %>
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js" type="text/javascript"></script>
@@ -12,10 +13,10 @@
 
 
 <div class="container">
-    <h1>Search for a Movie</h1>
-    <p>Type a Movie name and click on "Search".</p>
+    <h3>Search for a Movie</h3>
+    <!-- <p>Type a Movie name and click on "Search".</p> -->
     <form id="search-form">
-        <input type="text" id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
+        <input type="text" id="query" value="" class="form-control" placeholder="Type Your Movie Here"/>
         <input type="submit" id="search" class="btn btn-primary" value="Search" />
     </form>
     <div id="results"></div>
