--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class ="row">
   <div class="col s12">
-    <h1>OMG WE NEED A NAME</h1>
+    <h1 class="header">soundtrak</h1>
   </div>
 </div>
