--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,25 @@
+<div class="row">
+  <div class = "col s12">
+    <a class='dropdown-button btn' href='#' data-alignment='right' data-activates='nav-options'>Menu</a>
+      <ul id='nav-options' class='dropdown-content'>
+        <li><a href="/">Home</a></li>
+        <li class="divider"></li>
+        <li><a href="/about">About</a></li>
+        <li class="divider"></li>
+        <li><a href="/log_in">Log In</a></li>
+        <li class="divider"></li>
+        <li><a href="/signup">Sign Up</a></li>
+      </ul>
+  </div>
+</div>
 
-<div class ="row">
+<div class="row">
   <div class="col s12">
-    <h1 class="header">soundtrak</h1>
+
+    <container class="main-head">
+      <div id="header-image" class="header">
+      </div>
+      <h1 class="header">soundtrak</h1>
+    </container>
   </div>
 </div>
