--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 $header-font: 'Julius Sans One', sans-serif;
 $sub-head-font: 'Yellowtail', cursive;
 $main-font: 'Josefin Sans', sans-serif;
+$header-color: rgb(241, 244, 247);
+
 
 html {
  font-family: futura;
@@ -16,13 +18,21 @@ html {
 
 body{
   font-family: $main-font;
+  font-size: 18px;
+}
+
+h2{
+  font-family: $sub-head-font;
+  font-size: 2em;
+  margin-top: -3%;
+  margin-left: 40%;
 }
 
 .header{
-  margin-top: 48%;
+  margin-top: 38%;
   font-family: $header-font;
-  font-size: 4.5em;
-  color: rgb(241, 244, 247);
+  font-size: 5.25em;
+  color: $header-color;
   display: inline-block;
   margin-left: 1%;
   margin-right: 1%;
