--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class = "col s12">
-    <a class='dropdown-button btn' href='#' data-alignment='right' data-activates='nav-options'>Menu</a>
+    <a class='dropdown-button btn red accent-2' href='#' data-alignment='right' data-activates='nav-options'>Menu</a>
       <ul id='nav-options' class='dropdown-content'>
         <li><a href="/">Home</a></li>
         <li class="divider"></li>
@@ -21,5 +21,11 @@
       </div>
       <h1 class="header">soundtrak</h1>
     </container>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <h2 class = 'red-text text-accent-2'>Listen to the movies.  <a class="btn-floating btn-small waves-effect waves-light red accent-2" href="/search"><i class="material-icons">search</i></a> </h2> 
   </div>
 </div>
