--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,11 +1,8 @@
 
-<h2>Welcome Back, <%=@user.username%></h2> 
+<h2>Welcome Back, <%=@user.username%></h2>
+<img src= <%=@user.pic_url%>> </img>
   <h3>Here are the Movies and songs that you love:</h3>
 <%= button_to 'Log Out', log_out_path, method: :delete %>
-
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js" type="text/javascript"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
 
 
 
