--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,8 @@
      <%= f.text_field :email %>
      <%= f.label  :pic_url%>
      <%= f.text_field :pic_url %>
+     <%= f.label :bio %>
+     <%= f.password_field :bio %>
      <%= f.label :password %>
      <%= f.password_field :password %>
      <%= f.submit %>
