--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
+<div id="welcome-background">
+
+</div>
+
 <div class="row">
   <div class = "col s12">
     <a class='dropdown-button btn red accent-2' href='#' data-alignment='right' data-activates='nav-options'>Menu</a>
@@ -26,6 +30,6 @@
 
 <div class="row">
   <div class="col s12">
-    <h2 class = 'red-text text-accent-2'>Listen to the movies.  <a class="btn-floating btn-small waves-effect waves-light red accent-2" href="/search"><i class="material-icons">search</i></a> </h2> 
+    <h2 id="tagline" class = 'red-text text-accent-2'>Listen to the movies.  <a class="btn-floating btn-small waves-effect waves-light red accent-2" href="/search"><i class="material-icons">search</i></a> </h2>
   </div>
 </div>
