--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,3 +1,4 @@
+<input type="hidden" id="api-token" value='<%=@user.token%>'>
 
 <h2>Welcome Back, <%=@user.username%></h2>
 <img src= <%=@user.pic_url%>> </img>
