--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -14,12 +14,16 @@
 <div class="container">
     <h3>Search for a Movie</h3>
     <!-- <p>Type a Movie name and click on "Search".</p> -->
-    <form id="search-form">
+    <form id="search-form" action="">
         <input type="text" id="query" value="" class="form-control" placeholder="Type Your Movie Here"/>
         <input type="submit" id="search" class="btn btn-primary" value="Search" />
     </form>
     <div id="results"></div>
-
+      <%unless @movie.empty?%>
+        <% @movie.songs.each do |song|%>
+          <%=song.name%> <%=song.artist%>
+        <%end%>
+    <%end%>
     </div>
    <div class="movie-el">
 
