--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,11 @@
   <link rel="icon" type="image/ico" href="/app/assets/images/musicnote.ico" />
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>AckAttack</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
+
+
   <script type="text/template", id='movieListtempplate'>
     <%% _.each(movies, function(movie) { %>
       <h1>  Title: <%%= movie.get('Title') %> </h1>
@@ -15,9 +17,6 @@
         <img src="<%%= movie.get('Poster')%>" alt="We need an API key to get the poster" />
      <%% }); %>
   </script>
-
-
-
   <script type="text/template", id='albumListtempplate'>
      <table class="table striped">
        <thead>
@@ -41,8 +40,28 @@
 </head>
 
 <body class="<%= @home_page ? 'homepage' : ''%>">
+
   <div class = "container">
+
+  <div class="row">
+    <div class = "col s2">
+      <a class='dropdown-button btn red accent-2' href='#' data-activates='nav-options'>Menu</a>
+        <ul id='nav-options' class='dropdown-content'>
+          <li><a href="/" class="red-text text-accent-2">Home</a></li>
+          <li class="divider"></li>
+          <li><a href="/about" class="red-text text-accent-2">About</a></li>
+          <li class="divider"></li>
+          <li><a href="/log_in" class="red-text text-accent-2">Log In</a></li>
+          <li class="divider"></li>
+          <li><a href="/signup" class="red-text text-accent-2">Sign Up</a></li>
+          <li class="divider"></li>
+          <li><a href="/users" class="red-text text-accent-2">Community</a></li>
+        </ul>
+    </div>
+  </div>
+
     <%= yield %>
+
   </div>
 </body>
 </html>
