--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,3 +12,7 @@
   <%= f.text_field :pic_url %>
   <%=  f.submit %>
 <% end %>
+<form action="/users/<%= @user.id %>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <button type="submit"> Delete Account </button>
+</form>
