--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,25 @@
 <h1>Welcome to the Soundtrak community</h1>
 
-
-<table>
-  <thead>
-    <tr>
-      <td>
-        UserName
-      </td>
-      <td>
-        Biography
-      </td>
-    </tr>
-  </thead>
-<%@users.each do |user| %>
-
-  <tr>
-    <td>
-      <%=user.username%>
-    </td>
-    <td>
-      $<%=user.bio%>
-    </td>
-  </tr>
+<div class="row">
+  <% @users.each_with_index do |user, index| %>
+    <div class="col s4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="<%= user.pic_url %>">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4"><%= user.username %><i class="material-icons right">more_vert</i></span>
+          <p> oh hi</p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Bio<i class="material-icons right">close</i></span>
+          <p><%= user.bio %></p>
+        </div>
+      </div>
+    </div>
+    <% if index +1 % 3 == 0 %>
+      </div>
+      <div class ="row">
+    <%end%>
   <%end%>
-</table>
+</div>
