--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,5 @@
 
-<div class="row">
-  <div class = "col s2">
-    <a class='dropdown-button btn red accent-2' href='#' data-alignment='right' data-activates='nav-options'>Menu</a>
-      <ul id='nav-options' class='dropdown-content'>
-        <li><a href="/">Home</a></li>
-        <li class="divider"></li>
-        <li><a href="/about">About</a></li>
-        <li class="divider"></li>
-        <li><a href="/log_in">Log In</a></li>
-        <li class="divider"></li>
-        <li><a href="/signup">Sign Up</a></li>
-      </ul>
-  </div>
-</div>
+
 
 <div class="row">
   <div class="col s12">
@@ -27,6 +14,6 @@
 
 <div class="row">
   <div class="col s12">
-    <h2 id="tagline" class = 'red-text text-accent-2'>Listen to the movies.  <a class="btn-floating btn-small waves-effect waves-light red accent-2" href="/search"><i class="material-icons">search</i></a> </h2>
+    <h2 id="tagline" class = 'red-text text-accent-2'>Listen to the movies.  <a id="search-button" class="btn-floating btn-small waves-effect waves-light red accent-2" href="/search"><i class="material-icons">search</i></a> </h2>
   </div>
 </div>
