--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,24 +17,26 @@
         <img src="<%%= movie.get('Poster')%>" alt="We need an API key to get the poster" />
      <%% }); %>
   </script>
+
   <script type="text/template", id='albumListtempplate'>
      <table class="table striped">
        <thead>
          <tr>
-           <th>Album Name</th><th>album cover</th><th>spotify Id</th><th></th>
+           <th>Songs</th>
          </tr>
-       </thead>
-       <tbody>
-         <%% _.each(albums[0]["attributes"]["albums"]["items"], function(album) { %>
-           <tr>
-             <td><%%= album['name'] %></td>
-             <td><img src="<%%= album['images'][0]['url']%>" alt="test" /></td>
-             <td><%%= album['id']%></td>
-           </tr>
+     </thead>
+     <%% track = tracks[0]["attributes"]["tracks"]["items"][0]%>
+         <tr>
+            <%%test = "https://embed.spotify.com/?uri=spotify:track:"+track['id']%>
+            <td>
+              <iframe src="<%%=test%>" width="200" height="50" frameborder="0" allowtransparency="true"></iframe>
+            </td>
+         </tr>
+       
+     </tbody>
 
-         <%% }); %>
-       </tbody>
      </table>
+
   </script>
 
 </head>
