--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -17,8 +17,8 @@
 <div class="container">
     <h3>Search for a Movie</h3>
     <!-- <p>Type a Movie name and click on "Search".</p> -->
-    <form id="search-form" action="/json">
-        <input type="text" id="query" name="title" class="form-control" placeholder="Type Your Movie Here"/>
+    <form id="" action="/json" method="post">
+        <input type="text" id="query" name="name" class="form-control" placeholder="Type Your Movie Here"/>
         <input type="submit" id="search" class="btn btn-primary" value="Search" />
     </form>
     <div class="movie-el">
