--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<%= render "navbar" %>
+
     <table>
       <thead>
         <tr>
@@ -30,6 +25,3 @@
       </tr>
     <%end%>
     </table>
-
-  </body>
-</html>
