--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<%= render "navbar" %>
     <table>
       <thead>
         <tr>
@@ -28,6 +22,3 @@
       </tr>
     <%end%>
     </table>
-
-  </body>
-</html>
