--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-
+<%= render "navbar" %>
 <h2>Update your information, <%=@user.username%></h2>
 
 <%= form_for(@user, url: user_update_path, method: :put) do |f| %>
@@ -8,6 +8,8 @@
   <%= f.text_field :email %>
   <%= f.label :bio %>
   <%= f.text_field :bio %>
+  <%= f.label :location%>
+  <%= f.text_field :location %>
   <%= f.label :pic_url%>
   <%= f.text_field :pic_url %>
   <%=  f.submit %>
