--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,30 +1,39 @@
+<%= render "navbar" %>
 <input type="hidden" id="api-token" value='<%=@user.token%>'>
 
-<h2>Welcome Back, <%=@user.username%></h2>
-<img src= <%=@user.pic_url%>> </img>
-  <h3>Here are the Movies and songs that you love:</h3>
+
+<div id="header-line"> <img class="profile-image prof-head" src= "<%=@user.pic_url%>"> </img><h2 class= "prof-head">Welcome Back, <%=@user.username%></h2> </div>
+
+<div class="row">
+
+      <div class="col s2">
+        <h5>Favorites</h5>
+      </div>
+
+      <div class="col s10">
+        <div class="container">
+            <h3>Search for a Movie</h3>
+            <!-- <p>Type a Movie name and click on "Search".</p> -->
+            <form id="search-form" action="/json">
+                <input type="text" id="query" name="title" class="form-control" placeholder="Type Your Movie Here"/>
+                <input type="submit" id="search" class="btn btn-primary" value="Search" />
+            </form>
+            <div class="movie-el">
+
+            </div>
+            <div id="results"></div>
+
+            </div>
+
+           <div class="spotify-el">
+
+           </div>
+
+      </div>
+
+    </div>
+
+
+
+
 <%= button_to 'Log Out', log_out_path, method: :delete %><a href="/users/<%=@user.id%>/edit">Edit Profile</a>
-
-
-
-
-
-
-
-<div class="container">
-    <h3>Search for a Movie</h3>
-    <!-- <p>Type a Movie name and click on "Search".</p> -->
-    <form id="search-form" action="/json">
-        <input type="text" id="query" name="title" class="form-control" placeholder="Type Your Movie Here"/>
-        <input type="submit" id="search" class="btn btn-primary" value="Search" />
-    </form>
-    <div class="movie-el">
-
-    </div>
-    <div id="results"></div>
-
-    </div>
-
-   <div class="spotify-el">
-
-   </div>
