--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,19 @@
-
+<div class="row">
+  <div class = "col s2">
+    <a class='dropdown-button btn red accent-2' href='#' data-activates='nav-options'>Menu</a>
+      <ul id='nav-options' class='dropdown-content'>
+        <li><a href="/" class="red-text text-accent-2">Home</a></li>
+        <li class="divider"></li>
+        <li><a href="/about" class="red-text text-accent-2">About</a></li>
+        <li class="divider"></li>
+        <li><a href="/log_in" class="red-text text-accent-2">Log In</a></li>
+        <li class="divider"></li>
+        <li><a href="/signup" class="red-text text-accent-2">Sign Up</a></li>
+        <li class="divider"></li>
+        <li><a href="/users" class="red-text text-accent-2">Community</a></li>
+      </ul>
+  </div>
+</div>
 
 
 <div class="row">
