--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -1,16 +1,14 @@
+<%= render "navbar" %>
+
 <div class="container">
-    <h2>Search for a Movie</h2>
-    <!-- <p>Type a Movie name and click on "Search".</p> -->
-    <form id="search-form">
-        <input type="text" id="query" value="" class="form-control" placeholder="Type Your Movie Here"/>
-        <input type="submit" id="search" class="btn btn-primary red lighten-2" value="Search" />
-    </form>
-    <div id="results"></div>
-
-    </div>
-   <div class="movie-el">
-
-   </div>
-   <div class="spotify-el">
-
-   </div>
+  <h2>Search for a Movie</h2>
+  <form id="search-form">
+    <input type="text" id="query" value="" class="form-control" placeholder="Type Your Movie Here"/>
+    <input type="submit" id="search" class="btn btn-primary red lighten-2" value="Search" />
+  </form>
+  <div id="results"></div>
+</div>
+<div class="movie-el">
+</div>
+<div class="spotify-el">
+</div>
