--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -5,11 +5,19 @@
   <h3>Here are the Movies and songs that you love:</h3>
 <%= button_to 'Log Out', log_out_path, method: :delete %><a href="/users/<%=@user.id%>/edit">Edit Profile</a>
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js" type="text/javascript"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
+
+
+
+
+
 
 <div class="container">
     <h3>Search for a Movie</h3>
     <!-- <p>Type a Movie name and click on "Search".</p> -->
-    <form id="" action="/json" method="post">
+    <form id="search-form" action="/json" method="post">
         <input type="text" id="query" name="name" class="form-control" placeholder="Type Your Movie Here"/>
         <input type="submit" id="search" class="btn btn-primary" value="Search" />
     </form>
