--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <h1>  Title: <%%= movie.get('Title') %> </h1>
         Actors:  <%%= movie.get('Actors') %>
       <p>  Plot: <%%= movie.get('Plot') %> <p>
-        <img src="<%%= movie.get('Poster')%>" alt="We need an API key to get the poster" />
+        <img src="<%%= movie.get('Poster')%>" alt="Poster Not Available" />
      <%% }); %>
   </script>
 
@@ -32,7 +32,7 @@
               <iframe src="<%%=test%>" width="200" height="50" frameborder="0" allowtransparency="true"></iframe>
             </td>
          </tr>
-       
+
      </tbody>
 
      </table>
