--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
     <h3>Search for a Movie</h3>
     <!-- <p>Type a Movie name and click on "Search".</p> -->
-    <form id="" action="/json" method="post">
+    <form id="" action="/users/profile" method="post">
         <input type="text" id="query" name="name" class="form-control" placeholder="Type Your Movie Here"/>
         <input type="submit" id="search" class="btn btn-primary" value="Search" />
     </form>
@@ -23,3 +23,23 @@
    <div class="spotify-el">
 
    </div>
+   <%@movie.each do |mov|%>
+   <div class=".omdb-data">
+     <h2 class="title"><%=mov.name%></h2>    <h2 class="year"><%=mov.year%></h2>
+   </div>
+   <ul class="song-data">
+     <%=mov.songs.each do |song|%>
+       <li class="spotify">
+         <h4 class="song_name"><%=song.name%></h4> <h4 class="artist"><%if song.artist==nil%>none <%else%> <%=song.artist%> <%end%></h4>
+       </li>
+
+     <%end%>
+   </ul>
+
+
+
+
+
+
+
+   <%end%>
