adds user index updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,3 +89,20 @@ h2{
 #header-line{
   text-align: center;
 }
+
+#fav-column{
+  border-left: 1px solid grey;
+}
+
+#film-poster{
+  width: 80%;
+}
+
+.movie-el{
+  margin-top: 5%;
+}
+
+.community{
+  text-align: center;
+
+}
