adds about page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,11 @@
 <%= render "navbar" %>
-<h2> soundtrak </h2>
-  <p>Blah blha app find movies and songs blah blah blah </p>
+<h1> soundtrak </h1>
+
+<h2 class="about-page">
+  To me, movies and music go hand in hand. When I'm writing a script, one of the first things I do is find the music I'm going to play for the opening sequence.
+-Quentin Tarantino
+</h2>
+  <p>Hi! Welcome to sountrak, the app that allows you to unlock the world of movie music. <br/><br/>
+    Have you ever watched a movie and heard a song you really loved? Here at soundtrak we believe that the music makes the movie, and that there should be an easier way to track down the songs that you hear in any movie. <br/><br/>
+  Our app allows you to enter a movie title, find out more about the film and see all the music from that movie. Furthermore, you can listen to each of the songs right here!<br/><br/>
+Happy searching!</p>
