--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -20,7 +20,7 @@
     <h3>Search for a Movie</h3>
     <!-- <p>Type a Movie name and click on "Search".</p> -->
 
-    <form id="search-form" action="/movies/api" method='get'>
+    <form id="search-form" >
         <input type="text" id="query" name="name" class="form-control" placeholder="Type Your Movie Here"/>
         <input type="submit" id="search" class="btn btn-primary" value="Search" />
     </form>
