--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -2,36 +2,45 @@
 <input type="hidden" id="api-token" value='<%=@user.token%>'>
 
 
-
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js" type="text/javascript"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
-
-
-
-
-
-
 <div id="header-line"> <img class="profile-image prof-head" src= "<%=@user.pic_url%>"> </img><h2 class= "prof-head">Welcome Back, <%=@user.username%></h2> </div>
 
+<div class="row">
 
-
-<div class="container">
-    <h3>Search for a Movie</h3>
-    <!-- <p>Type a Movie name and click on "Search".</p> -->
-
-    <form id="search-form" >
-        <input type="text" id="query" name="name" class="form-control" placeholder="Type Your Movie Here"/>
-        <input type="submit" id="search" class="btn btn-primary" value="Search" />
+      <div class="col s2">
+        <h5>Favorites</h5>
+        <% @favorites.each do |favorite| %>
+        <!-- <h6><%= favorite.song.name %> THIS IS WHERE DATA FROM SPOTIFY SONG GETS CALLED-->
+        <form action="/favorites/<%= favorite.id %>" method="delete">
+        <input type="hidden" name="_method" value="delete">
+        <button class ="ticket-item" type="submit"> x </button>
+      </h6>
     </form>
-    <div class="movie-el">
+<% end %>
+      </div>
+
+      <div class="col s10">
+        <div class="container">
+            <h3>Search for a Movie</h3>
+            <!-- <p>Type a Movie name and click on "Search".</p> -->
+            <form id="search-form" action="/json">
+                <input type="text" id="query" name="title" class="form-control" placeholder="Type Your Movie Here"/>
+                <input type="submit" id="search" class="btn btn-primary" value="Search" />
+            </form>
+            <div class="movie-el">
+
+            </div>
+            <div id="results"></div>
+
+            </div>
+
+           <div class="spotify-el">
+
+           </div>
 
       </div>
 
-        <div class="spotify-el">
-        </div>
     </div>
-  </div>
+
 
 
 
