--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%% _.each(movies, function(movie) { %>
     <div class="row">
       <div class="col s6">
-        <img id="film-poster" src="<%%= movie.get('Poster')%>" alt="We need an API key to get the poster" />
+        <img id="film-poster" src="<%%= movie.get('Poster')%>" alt="No Poster Available" />
       </div>
       <div class="col s6">
         <h3><%%= movie.get('Title') %></h3>
@@ -35,6 +35,7 @@
             <td>
               <iframe src="<%%=test%>" width="200" height="50" frameborder="0" allowtransparency="true"></iframe>
             </td>
+            <td class="song_id"> <td>
          </tr>
 
      </tbody>
