--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,3 +1,51 @@
+<head>
+  <script type="text/template", id='movieListtempplate'>
+    <%% _.each(movies, function(movie) { %>
+    <div class="row">
+      <div class="col s6">
+        <img id="film-poster" src="<%%= movie.get('Poster')%>" alt="No Poster Available" />
+      </div>
+      <div class="col s6">
+        <h3><%%= movie.get('Title') %></h3>
+            <%%= movie.get('Actors') %>
+        <p><%%= movie.get('Plot') %><p>
+      </div>
+    </div>
+    <%% }); %>
+  </script>
+
+  <script type="text/template", id='albumListtempplate'>
+     <table class="table striped">
+       <thead>
+         <tr>
+           <th>Songs</th>
+         </tr>
+     </thead>
+     <%% track = tracks[0]["attributes"]["tracks"]["items"][0]%>
+         <tr>
+            <%%test = "https://embed.spotify.com/?uri=spotify:track:"+track['id']%>
+            <td>
+              <iframe src="<%%=test%>" width="200" height="50" frameborder="0" allowtransparency="true"></iframe>
+            </td>
+            <td class="song_id"> <td>
+              <form action="/favorites" method="post">
+                <input type="hidden" name="user[token]" value="<%= @user.token %>"/>
+                <input type="hidden" name="favorite[user_id]" value="<%= @user.id %>"/>
+                <input id='song_id' type="hidden" name="favorite[song_id]" value=""/>
+                <input class ="button" type="submit" value="*">
+              </form>
+            </div>
+
+         </tr>
+
+     </tbody>
+
+     </table>
+
+  </script>
+
+</head>
+<body>
 <%= render "navbar" %>
 <input type="hidden" id="api-token" value='<%=@user.token%>'>
 
@@ -9,10 +57,10 @@
       <div class="col s2">
         <h5>Favorites</h5>
         <% @favorites.each do |favorite| %>
-        <!-- <h6><%= favorite.song.name %> THIS IS WHERE DATA FROM SPOTIFY SONG GETS CALLED-->
-        <form action="/favorites/<%= favorite.id %>" method="delete">
+        <h6><%= favorite.song_id %>
+        <form action="/favorites/<%= favorite.id %>" method="post">
         <input type="hidden" name="_method" value="delete">
-        <button class ="ticket-item" type="submit"> x </button>
+        <button  type="submit"> x </button>
       </h6>
     </form>
 <% end %>
@@ -35,7 +83,6 @@
 
            <div class="spotify-el">
 
-           </div>
 
       </div>
 
@@ -45,3 +92,4 @@
 
 
 <%= button_to 'Log Out', log_out_path, method: :delete %><a href="/users/<%=@user.id%>/edit">Edit Profile</a>
+</body>
