--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,8 @@
         <li><a href="/signup" class="red-text text-accent-2">Sign Up</a></li>
         <li class="divider"></li>
         <li><a href="/users" class="red-text text-accent-2">Community</a></li>
+        <li class="divider"></li>
+        <li><a href="/search" class="red-text text-accent-2">Search</a></li>
       </ul>
   </div>
 </div>
