--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -52,15 +52,12 @@
       <div class="col s2">
         <h5>Favorites</h5>
         <% @favorites.each do |favorite| %>
+        <li id='fav'>
          <iframe class="result-line" src="<%= favorite.spotify_url %>" width="80" height="80" frameborder="0" allowtransparency="true"></iframe >
-          <h6><% Song.where("id=?",favorite.song_id).each do |song| %>
-            <!-- <%Movie.where("id=?",)%> -->
-            <%=song.name%>
-          <%end%>
-        <form action="/favorites/<%= favorite.id %>" method="post">
+        <form class="result-line" action="/favorites/<%= favorite.id %>" method="post">
         <input type="hidden" name="_method" value="delete">
-        <button  type="submit"> x </button>
-      </h6>
+        <button id='fav-delete' type="submit">x</button>
+      </li>
     </form>
     <% end %>
       </div>
@@ -73,9 +70,7 @@
                 <input type="text" id="query" name="title" class="form-control" placeholder="Type Your Movie Here"/>
                 <input type="submit" id="search" class="btn btn-primary" value="Search" />
             </form>
-            <form action="/users/profile">
-                <input type="submit" class="btn btn-primary" value="Search Again" />
-            </form>
+
 
             <div class="movie-el">
 
@@ -85,6 +80,5 @@
             </div>
 
            <div class="spotify-el">
-            <h2>Songs</h2>
           </div>
     </div>
