--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,7 +113,8 @@ h2{
 }
 
 .result-line{
-  display: inline-block;
+  display: block;
+  float: left;
 }
 
 #fav-delete{
@@ -125,10 +126,15 @@ h2{
   margin-bottom: 25%;
 }
 
-#fav{
-  list-style: none;
+.fav{
+  display: block;
 }
 
 .spotify-el{
   border-top: 1px solid grey;
+}
+
+#track-return{
+  padding-left: 18%;
+  height: 85px;
 }
