--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -16,23 +16,20 @@
   </script>
 
   <script type="text/template", id='albumListtempplate'>
-    <ul>
+
      <%% track = tracks[0]["attributes"]["tracks"]["items"][0]%>
             <%%test = "https://embed.spotify.com/?uri=spotify:track:"+track['id']%>
-            <li>
+            <div id="track-return">
               <iframe class="result-line" src="<%%=test%>" width="400" height="100" frameborder="0" allowtransparency="true"></iframe>
-
               <form id="fav-button" class="result-line" action="/favorites" method="post">
                 <input type="hidden" name="user[token]" value="<%= @user.token %>"/>
                 <input type="hidden" name="favorite[spotify_url]" value="<%%=test%>">
                 <input type="hidden" name="favorite[user_id]" value="<%= @user.id %>"/>
-                <input id='song_id' type="hidden" name="favorite[song_id]" value=""/>
+                <input class='song_id' type="hidden" name="favorite[song_id]" value="<%%= song_id %>"/>
                 <input class ="button" type="submit" value="*">
               </form>
-                </li>
-      </ul>
-
-  </script>
+            </div>
+    </script>
 
 </head>
 
@@ -53,13 +50,14 @@
       <div class="col s2">
         <h5>Favorites</h5>
         <% @favorites.each do |favorite| %>
-        <li id='fav'>
-         <iframe class="result-line" src="<%= favorite.spotify_url %>" width="80" height="80" frameborder="0" allowtransparency="true"></iframe >
-        <form class="result-line" action="/favorites/<%= favorite.id %>" method="post">
-        <input type="hidden" name="_method" value="delete">
-        <button id='fav-delete' type="submit">x</button>
-      </li>
-    </form>
+        <div class='fav'>
+        <h6><%= Song.find(favorite.song_id).name %></h6>
+          <iframe class="result-line" src="<%= favorite.spotify_url %>" width="80" height="80" frameborder="0" allowtransparency="true"></iframe >
+          <form class="result-line" action="/favorites/<%= favorite.id %>" method="post">
+            <input type="hidden" name="_method" value="delete">
+            <button class='fav-delete' type="submit">x</button>
+          </form>
+        </div>
     <% end %>
       </div>
 
