--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -26,7 +26,7 @@
                 <input type="hidden" name="user[token]" value="<%= @user.token %>"/>
                 <input type="hidden" name="favorite[spotify_url]" value="<%%=test%>">
                 <input type="hidden" name="favorite[user_id]" value="<%= @user.id %>"/>
-                <input id='song_id' type="hidden" name="favorite[song_id]" value=""/>
+                <input id='song_id' type="hidden" name="favorite[song_id]" value="<%%=song%>"/>
                 <input class ="button" type="submit" value="*">
               </form>
                 </li>
