adds fixed layout to community

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <% if index +1 % 4 == 0 %>
+    <% if (index +1) % 4 == 0 %>
       </div>
       <div class ="row">
     <%end%>
